Media: Fixed firefox dark mode image support
This fix should later be replaced by a proper solution

--- a/src/style/media.scss
+++ b/src/style/media.scss
@@ -56,3 +56,9 @@
         background-attachment: unset;
     }
 }
+
+@-moz-document url-prefix() {
+    #devices > .card > img {
+        filter: invert(1);
+    }
+}
